# mlzc-movie-pred

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  movies.ipynb  movies_refined.ipynb  pyproject.toml
src/: movies.py  predict.py  predict2.py  train.py  train2.py
