[tool.poetry]
name = "mlzc-reg-movies"
version = "0.1.0"
description = "Regression model for Movies"
authors = ["anse"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
flask = "^3.1.0"
gunicorn = "^23.0.0"
xgboost = "^2.1.2"
category-encoders = "^2.6.4"
textblob = "^0.18.0.post0"


[tool.poetry.group.dev.dependencies]
kagglehub = "^0.3.4"
tqdm = "^4.67.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
black = "^24.10.0"
jupyterlab = "^4.3.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
